--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Book-Bilingual
 
+0.002   16 Apr, 2021
+        Add script biread in place of non-functioning Reader.pl
+
 0.001   16 Apr, 2021
         First version, released on an unsuspecting world.
 
