--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Book-Bilingual
 
+0.003   17 Apr, 2021
+        Add method to convert book to JSON
+
 0.002   16 Apr, 2021
         Add script biread in place of non-functioning Reader.pl
 
